# openstudio-mcp

./: .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml  ruff.toml  test_debug.py  test_output.txt
docker/: Dockerfile  Dockerfile.arm64  docker-compose.tracing.yml  otel-collector-config.yaml
docs/: architecture.md  development-process-findings.md  geometry-workflows-research.md  llm-ci-testing-plan_v2.md  llm-test-benchmark-2026-03-08.md  llm-test-benchmark-2026-03-12.md  llm-test-benchmark-2026-03-13-cooled-beam.md  llm-test-benchmark.md  phase_history.md  plan_agent_effectiveness.md  plan_claude_code_skills.md  plan_tool_description_optimization.md  review_schema.json  ruff_excluded_rules.md  testing-frameworks-summary.md  testing.md  tool-discovery-research.md
mcp_server/: config.py  model_manager.py  osm_helpers.py  otel_middleware.py  run_registry.py  server.py  stdout_suppression.py  telemetry.py  util.py  version.py
scripts/: generate_golden.py  mcp_run_osw.py  mcp_run_seb4.py  smoke_stdio.py
tests/: conftest.py  contract_examples.json  eval_tool_selection.py  test_add_air_loop.py  test_add_output_meter.py  test_add_output_variable.py  test_api_reference.py  test_bar_building.py  test_building.py  test_common_measures.py  test_component_controls.py  test_component_properties.py  test_comstock.py  test_concurrent_tools.py  test_constructions.py  test_contract.py  test_copy_file.py  test_copy_run_artifact.py  test_create_constructions.py  test_create_example_osm.py  test_create_loads.py  test_create_schedule_ruleset.py  test_create_space.py  test_create_thermal_zone.py  (+60 more)
(+217 files in other folders)
