[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "openstudio-mcp"
version = "0.1.0"
description = "Thin MCP server around OpenStudio CLI with async runs and testable outputs."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
authors = [{ name = "Brian Ball", email = "brian.ball@nlr.gov" }]

requires-python = ">=3.11"
dependencies = [
  "fastmcp>=0.4.0",
  "pydantic>=2.6",
  "psutil>=5.9",
  "jsonschema>=4.21",
  "openstudio==3.11.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4",
  "pytest>=8.0",
  "pytest-timeout>=2.3.1",
  "mcp",
]

[project.scripts]
openstudio-mcp = "mcp_server.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = "mcp_server"
module-root = ""
